# mimer-mcp

./: .dockerignore  .env.example  .env_docker_compose  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml  requirements.txt  server.json
docs/: SECURITY.md  dev-guide.md  getting-started.md  index.md  introduction.md
docs/about/: CHANGELOG.md
docs/mimer-mcp-server/: examples.md  index.md  tools.md
examples/: mcp_http_client.py
experiments/: query_performance_benchmark.ipynb
src/mimer_mcp_server/: __init__.py  config.py  server.py
src/mimer_mcp_server/database/: __init__.py  connection.py  ddl_generator.py  index_manager.py  monitoring.py  schema_inspector.py  stored_procedure_manager.py
src/mimer_mcp_server/utils/: __init__.py  utils.py
tests/: test_connection_pool.py  test_index_manager.py  test_monitoring.py  test_schema_inspector.py  test_server.py  test_stored_procedure_manager.py
